--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
         <div class="functions-content">
             <div class="container">
                
-                <div class="collapse-card">
+                <div class="collapse-card" data-toggle="collapse" data-target="#collapseOne">
                     <div class="row">
                         <div class="col-8 col-md-6 collapse-card-text">
                             <p class="heading">Vedení datových inventurních záznamů</p>
@@ -264,7 +264,7 @@
                             <i class="fa fa-check-circle fa-2x circle-check"></i>
                         </div>
                         <div class="col-1 col-md-1">
-                            <a href="#" data-toggle="collapse" data-target="#collapseOne">
+                            <a href="#" class="collapse-href">
                                 <i class="material-icons collapse-button" aria-expanded="true" aria-controls="collapseOne">keyboard_arrow_down</i>
                             </a>
                         </div>
@@ -287,7 +287,7 @@
                       </div>
                     </div>
                 </div>
-                <div class="collapse-card">
+                <div class="collapse-card" data-toggle="collapse" data-target="#collapseTwo">
                     <div class="row">
                         <div class="col-8 col-md-6 collapse-card-text">
                             <p class="heading">Evidence systémů</p>
@@ -297,7 +297,7 @@
                             <i class="fa fa-check-circle fa-2x circle-check"></i>
                         </div>
                         <div class="col-1 col-md-1">
-                            <a href="#" data-toggle="collapse" data-target="#collapseTwo">
+                            <a href="#" class="collapse-href">
                                 <i class="material-icons collapse-button" aria-expanded="true" aria-controls="collapseTwo">keyboard_arrow_down</i>
                             </a>
                         </div>
@@ -320,7 +320,7 @@
                       </div>
                     </div>
                 </div>
-                <div class="collapse-card">
+                <div class="collapse-card" data-toggle="collapse" data-target="#collapseThree">
                     <div class="row">
                         <div class="col-8 col-md-6 collapse-card-text">
                             <p class="heading">Evidence zabezpečených úložišť OÚ</p>
@@ -330,7 +330,7 @@
                             <i class="fa fa-check-circle fa-2x circle-check"></i>
                         </div>
                         <div class="col-1 col-md-1">
-                            <a href="#" data-toggle="collapse" data-target="#collapseThree">
+                            <a href="#" class="collapse-href">
                                 <i class="material-icons collapse-button" aria-expanded="true" aria-controls="collapseThree">keyboard_arrow_down</i>
                             </a>
                         </div>
@@ -347,7 +347,7 @@
                       </div>
                     </div>
                 </div>
-                <div class="collapse-card">
+                <div class="collapse-card" data-toggle="collapse" data-target="#collapseFour">
                     <div class="row">
                         <div class="col-8 col-md-6 collapse-card-text">
                             <p class="heading">Uzly</p>
@@ -357,7 +357,7 @@
                             <i class="fa fa-check-circle fa-2x circle-check"></i>
                         </div>
                         <div class="col-1 col-md-1">
-                            <a href="#" data-toggle="collapse" data-target="#collapseFour">
+                            <a href="#" class="collapse-href">
                                 <i class="material-icons collapse-button" aria-expanded="true" aria-controls="collapseFour">keyboard_arrow_down</i>
                             </a>
                         </div>
@@ -374,7 +374,7 @@
                       </div>
                     </div>
                 </div>
-                <div class="collapse-card">
+                <div class="collapse-card" data-toggle="collapse" data-target="#collapseFive">
                     <div class="row">
                         <div class="col-8 col-md-6 collapse-card-text">
                             <p class="heading">Externí organizace</p>
@@ -384,7 +384,7 @@
                             <i class="fa fa-check-circle fa-2x circle-check"></i>
                         </div>
                         <div class="col-1 col-md-1">
-                            <a href="#" data-toggle="collapse" data-target="#collapseFive">
+                            <a href="#" class="collapse-href">
                                 <i class="material-icons collapse-button" aria-expanded="true" aria-controls="collapseFive">keyboard_arrow_down</i>
                             </a>
                         </div>
@@ -401,7 +401,7 @@
                       </div>
                     </div>
                 </div>
-                <div class="collapse-card">
+                <div class="collapse-card" data-toggle="collapse" data-target="#collapseSix">
                     <div class="row">
                         <div class="col-8 col-md-6 collapse-card-text">
                             <p class="heading">Průvodce přidáním účelů</p>
@@ -411,7 +411,7 @@
                             <i class="fa fa-check-circle fa-2x circle-check"></i>
                         </div>
                         <div class="col-1 col-md-1">
-                            <a href="#" data-toggle="collapse" data-target="#collapseSix">
+                            <a href="#" class="collapse-href">
                                 <i class="material-icons collapse-button" aria-expanded="true" aria-controls="collapseSix">keyboard_arrow_down</i>
                             </a>
                         </div>
@@ -428,7 +428,7 @@
                       </div>
                     </div>
                 </div>
-                <div class="collapse-card">
+                <div class="collapse-card" data-toggle="collapse" data-target="#collapseSeven">
                     <div class="row">
                         <div class="col-8 col-md-6 collapse-card-text">
                             <p class="heading">Reporty</p>
@@ -438,7 +438,7 @@
                             <i class="fa fa-check-circle fa-2x circle-check"></i>
                         </div>
                         <div class="col-1 col-md-1">
-                            <a href="#" data-toggle="collapse" data-target="#collapseSeven">
+                            <a href="#" class="collapse-href">
                                 <i class="material-icons collapse-button" aria-expanded="true" aria-controls="collapseSeven">keyboard_arrow_down</i>
                             </a>
                         </div>
@@ -455,7 +455,7 @@
                       </div>
                     </div>
                 </div>
-                <div class="collapse-card">
+                <div class="collapse-card" data-toggle="collapse" data-target="#collapseEight">
                     <div class="row">
                         <div class="col-8 col-md-6 collapse-card-text">
                             <p class="heading">Podpora rolí</p>
@@ -465,7 +465,7 @@
                             <i class="fa fa-check-circle fa-2x circle-check"></i>
                         </div>
                         <div class="col-1 col-md-1">
-                            <a href="#" data-toggle="collapse" data-target="#collapseEight">
+                            <a href="#" class="collapse-href">
                                 <i class="material-icons collapse-button" aria-expanded="true" aria-controls="collapseEight">keyboard_arrow_down</i>
                             </a>
                         </div>
@@ -485,7 +485,7 @@
                       </div>
                     </div>
                 </div>
-                <div class="collapse-card">
+                <div class="collapse-card" data-toggle="collapse" data-target="#collapseNine">
                         <div class="row">
                             <div class="col-8 col-md-6 collapse-card-text">
                                 <p class="heading">Soulad s GDPR</p>
@@ -495,7 +495,7 @@
                                 <i class="fa fa-check-circle fa-2x circle-check"></i>
                             </div>
                             <div class="col-1 col-md-1">
-                                <a href="#" data-toggle="collapse" data-target="#collapseNine">
+                                <a href="#" class="collapse-href">
                                     <i class="material-icons collapse-button" aria-expanded="true" aria-controls="collapseNine">keyboard_arrow_down</i>
                                 </a>
                             </div>
@@ -512,7 +512,7 @@
                           </div>
                         </div>
                     </div>
-                    <div class="collapse-card">
+                    <div class="collapse-card" data-toggle="collapse" data-target="#collapseTen">
                             <div class="row">
                                 <div class="col-8 col-md-6 collapse-card-text">
                                     <p class="heading">Podpora procesu odpovědi</p>
@@ -522,7 +522,7 @@
                                     <i class="fa fa-check-circle fa-2x circle-check"></i>
                                 </div>
                                 <div class="col-1 col-md-1">
-                                    <a href="#" data-toggle="collapse" data-target="#collapseTen">
+                                    <a href="#" class="collapse-href">
                                         <i class="material-icons collapse-button" aria-expanded="true" aria-controls="collapseTen">keyboard_arrow_down</i>
                                     </a>
                                 </div>
@@ -542,7 +542,7 @@
                               </div>
                             </div>
                         </div>
-                        <div class="collapse-card">
+                        <div class="collapse-card" data-toggle="collapse" data-target="#collapseEleven">
                             <div class="row">
                                 <div class="col-8 col-md-6 collapse-card-text">
                                     <p class="heading">Riziková analýza</p>
@@ -552,7 +552,7 @@
                                     <p class="preparing">Připravujeme</p>
                                 </div>
                                 <div class="col-1 col-md-1">
-                                    <a href="#" data-toggle="collapse" data-target="#collapseEleven">
+                                    <a href="#" class="collapse-href">
                                         <i class="material-icons collapse-button" aria-expanded="true" aria-controls="collapseEleven">keyboard_arrow_down</i>
                                     </a>
                                 </div>
@@ -566,7 +566,7 @@
                               </div>
                             </div>
                         </div>
-                        <div class="collapse-card">
+                        <div class="collapse-card" data-toggle="collapse" data-target="#collapseTwelve">
                             <div class="row">
                                 <div class="col-8 col-md-6 collapse-card-text">
                                     <p class="heading">Analýza DPIA</p>
@@ -576,7 +576,7 @@
                                     <p class="preparing">Připravujeme</p>
                                 </div>
                                 <div class="col-1 col-md-1">
-                                    <a href="#" data-toggle="collapse" data-target="#collapseTwelve">
+                                    <a href="#" class="collapse-href">
                                         <i class="material-icons collapse-button" aria-expanded="true" aria-controls="collapseTwelve">keyboard_arrow_down</i>
                                     </a>
                                 </div>
@@ -590,7 +590,7 @@
                               </div>
                             </div>
                         </div>
-                        <div class="collapse-card">
+                        <div class="collapse-card" data-toggle="collapse" data-target="#collapseThirteen">
                             <div class="row">
                                 <div class="col-8 col-md-6 collapse-card-text">
                                     <p class="heading">Školení v Elearningu</p>
@@ -600,7 +600,7 @@
                                     <p class="preparing">Připravujeme</p>
                                 </div>
                                 <div class="col-1 col-md-1">
-                                    <a href="#" data-toggle="collapse" data-target="#collapseThirteen">
+                                    <a href="#" class="collapse-href">
                                         <i class="material-icons collapse-button" aria-expanded="true" aria-controls="collapseThirteen">keyboard_arrow_down</i>
                                     </a>
                                 </div>
