--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </ul>
           <ul class="navbar-nav">
               <li class="nav-item">
-                <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--red">
+                <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--red" data-toggle="modal" data-target="#buyModal">
                     <i class="fa fa-shopping-cart"></i> Zakoupit EFFIT gdpr
                 </button>
               </li>
