--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <p>
                 Pomůže se zavedením a údržbou nařízení GDPR od začátku až dokonce. Obsahuje bázi typizovaných řešení pro Vás a metodiku ověřenou z desítek GDPR projektů. Seznamte se s ním níže!
             </p>
-            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--red">
+            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--red" data-toggle="modal" data-target="#buyModal">
                 <i class="fa fa-shopping-cart"></i> Zakoupit EFFIT gdpr
             </button>
             <br>
