--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <link rel="icon" href="assets/fav/0ico_16.png" type="image/png" sizes="16x16">
+    <link rel="icon" href="assets/fav/0ico_32.png" type="image/png" sizes="32x32">
+    <link rel="icon" href="assets/fav/0ico_64.png" type="image/png" sizes="64x64">
+
     <!-- Material Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
    
