--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
                             <div class="row">
                                 <div class="col-8 col-md-6 collapse-card-text">
                                     <p class="heading">Riziková analýza</p>
-                                    <p class="subheading"></p>
+                                    <p class="subheading"><p class="preparing">Připravujeme</p></p>
                                 </div>
                                 <div class="col-2 col-md-5">
                                     <p class="preparing">Připravujeme</p>
@@ -574,7 +574,7 @@
                             <div class="row">
                                 <div class="col-8 col-md-6 collapse-card-text">
                                     <p class="heading">Analýza DPIA</p>
-                                    <p class="subheading"></p>
+                                    <p class="subheading"><p class="preparing">Připravujeme</p></p>
                                 </div>
                                 <div class="col-2 col-md-5">
                                     <p class="preparing">Připravujeme</p>
@@ -598,7 +598,7 @@
                             <div class="row">
                                 <div class="col-8 col-md-6 collapse-card-text">
                                     <p class="heading">Školení v Elearningu</p>
-                                    <p class="subheading"></p>
+                                    <p class="subheading"><p class="preparing">Připravujeme</p></p>
                                 </div>
                                 <div class="col-2 col-md-5">
                                     <p class="preparing">Připravujeme</p>
