--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="collapse-card" data-toggle="collapse" data-target="#collapseEleven">
+                    <div class="collapse-card">
                         <div class="row">
                             <div class="col-8 col-md-6 collapse-card-text">
                                 <p class="heading">Riziková analýza</p>
@@ -557,21 +557,13 @@
                                 <p class="preparing">Připravujeme</p>
                             </div>
                             <div class="col-1 col-md-1">
-                                <a href="#" class="collapse-href">
-                                    <i class="material-icons collapse-button" aria-expanded="true" aria-controls="collapseEleven">keyboard_arrow_down</i>
+                                <a href="#" class="collapse-href-prep" onclick="return false">
+                                    <i class="material-icons collapse-button">keyboard_arrow_down</i>
                                 </a>
                             </div>
                         </div>
-                        <div id="collapseEleven" class="collapse" aria-labelledby="headingEleven" data-parent="#accordion">
-                            <div class="card-body">
-                            <div class="images">
-                                <div class="row">
-                                </div>
-                            </div>
-                            </div>
-                        </div>
                     </div>
-                    <div class="collapse-card" data-toggle="collapse" data-target="#collapseTwelve">
+                    <div class="collapse-card">
                         <div class="row">
                             <div class="col-8 col-md-6 collapse-card-text">
                                 <p class="heading">Analýza DPIA</p>
@@ -581,21 +573,13 @@
                                 <p class="preparing">Připravujeme</p>
                             </div>
                             <div class="col-1 col-md-1">
-                                <a href="#" class="collapse-href">
-                                    <i class="material-icons collapse-button" aria-expanded="true" aria-controls="collapseTwelve">keyboard_arrow_down</i>
+                                <a href="#" class="collapse-href-prep" onclick="return false">
+                                    <i class="material-icons collapse-button">keyboard_arrow_down</i>
                                 </a>
                             </div>
                         </div>
-                        <div id="collapseTwelve" class="collapse" aria-labelledby="headingTwelve" data-parent="#accordion">
-                            <div class="card-body">
-                            <div class="images">
-                                <div class="row">
-                                </div>
-                            </div>
-                            </div>
-                        </div>
                     </div>
-                    <div class="collapse-card" data-toggle="collapse" data-target="#collapseThirteen">
+                    <div class="collapse-card">
                         <div class="row">
                             <div class="col-8 col-md-6 collapse-card-text">
                                 <p class="heading">Školení v Elearningu</p>
@@ -605,17 +589,9 @@
                                 <p class="preparing">Připravujeme</p>
                             </div>
                             <div class="col-1 col-md-1">
-                                <a href="#" class="collapse-href">
-                                    <i class="material-icons collapse-button" aria-expanded="true" aria-controls="collapseThirteen">keyboard_arrow_down</i>
+                                <a href="#" class="collapse-href-prep" onclick="return false">
+                                    <i class="material-icons collapse-button">keyboard_arrow_down</i>
                                 </a>
-                            </div>
-                        </div>
-                        <div id="collapseThirteen" class="collapse" aria-labelledby="headingThirteen" data-parent="#accordion">
-                            <div class="card-body">
-                            <div class="images">
-                                <div class="row">
-                                </div>
-                            </div>
                             </div>
                         </div>
                     </div>
