--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@
             
                                 <div class="conditions">
                                     <input type="checkbox" name="conditions">
-                                    <label for="conditions">Souhlasím s licenčními podmínkami</label>
+                                    <label for="conditions">Souhlasím se <a href="#">zpracováním osobních údajů</a></label>
                                 </div>
             
                                 <p>
