--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <!-- Material Design Lite -->
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
     
+    <!-- Light Box -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css">
+
     <link rel="stylesheet" href="css/main.css">
 
     <title>[Web] EFFIT</title>
@@ -279,13 +282,19 @@
                         <div class="images">
                             <div class="row">
                                 <div class="col-md-4">
-                                    <img class="img-fluid" src="assets/img/Functions/diz_1.png">
+                                    <a href="assets/img/Functions/diz_1.png" data-toggle="lightbox">
+                                        <img class="img-fluid" src="assets/img/Functions/diz_1.png">
+                                    </a>
                                 </div>
                                 <div class="col-md-4">
-                                    <img class="img-fluid" src="assets/img/Functions/diz_2.png">  
+                                    <a href="assets/img/Functions/diz_2.png" data-toggle="lightbox">
+                                        <img class="img-fluid" src="assets/img/Functions/diz_2.png">
+                                    </a>
                                 </div>
                                 <div class="col-md-4">
-                                    <img class="img-fluid" src="assets/img/Functions/diz_3.png">
+                                    <a href="assets/img/Functions/diz_3.png" data-toggle="lightbox">
+                                        <img class="img-fluid" src="assets/img/Functions/diz_3.png">
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -312,13 +321,19 @@
                         <div class="images">
                             <div class="row">
                                 <div class="col-md-4">
-                                    <img class="img-fluid" src="assets/img/Functions/systemy1.png">
+                                    <a href="assets/img/Functions/systemy1.png" data-toggle="lightbox">
+                                        <img class="img-fluid" src="assets/img/Functions/systemy1.png">
+                                    </a>
                                 </div>
                                 <div class="col-md-4">
-                                    <img class="img-fluid" src="assets/img/Functions/systemy2.png">  
+                                    <a href="assets/img/Functions/systemy2.png" data-toggle="lightbox">
+                                        <img class="img-fluid" src="assets/img/Functions/systemy2.png">
+                                    </a> 
                                 </div>
                                 <div class="col-md-4">
-                                    <img class="img-fluid" src="assets/img/Functions/systemy3.png">
+                                    <a href="assets/img/Functions/systemy3.png" data-toggle="lightbox">
+                                        <img class="img-fluid" src="assets/img/Functions/systemy3.png">
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -345,7 +360,9 @@
                         <div class="images">
                             <div class="row">
                                 <div class="col-md-4">
-                                    <img class="img-fluid" src="assets/img/Functions/uloziste1.png">
+                                    <a href="assets/img/Functions/uloziste1.png" data-toggle="lightbox">
+                                        <img class="img-fluid" src="assets/img/Functions/uloziste1.png">
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -372,7 +389,9 @@
                         <div class="images">
                             <div class="row">
                                 <div class="col-md-4">
-                                    <img class="img-fluid" src="assets/img/Functions/uzly1.png">
+                                    <a href="assets/img/Functions/uzly1.png" data-toggle="lightbox">
+                                        <img class="img-fluid" src="assets/img/Functions/uzly1.png">
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -399,7 +418,9 @@
                         <div class="images">
                             <div class="row">
                                 <div class="col-md-4">
-                                    <img class="img-fluid" src="assets/img/Functions/organizace1.png">
+                                    <a href="assets/img/Functions/organizace1.png" data-toggle="lightbox">
+                                        <img class="img-fluid" src="assets/img/Functions/organizace1.png">
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -426,7 +447,9 @@
                         <div class="images">
                             <div class="row">
                                 <div class="col-md-4">
-                                    <img class="img-fluid" src="assets/img/Functions/ucely1.png">
+                                    <a href="assets/img/Functions/ucely1.png" data-toggle="lightbox">
+                                        <img class="img-fluid" src="assets/img/Functions/ucely1.png">
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -453,7 +476,9 @@
                         <div class="images">
                             <div class="row">
                                 <div class="col-md-4">
-                                    <img class="img-fluid" src="assets/img/Functions/reporty1.png">
+                                    <a href="assets/img/Functions/reporty1.png" data-toggle="lightbox">
+                                        <img class="img-fluid" src="assets/img/Functions/reporty1.png">
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -510,7 +535,9 @@
                         <div class="images">
                             <div class="row">
                                 <div class="col-md-4">
-                                    <img class="img-fluid" src="assets/img/Functions/soulad1.png">
+                                    <a href="assets/img/Functions/soulad1.png" data-toggle="lightbox">
+                                        <img class="img-fluid" src="assets/img/Functions/soulad1.png">
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -537,10 +564,14 @@
                             <div class="images">
                                 <div class="row">
                                     <div class="col-md-4">
-                                        <img class="img-fluid" src="assets/img/Functions/odpovedi1.png">
+                                        <a href="assets/img/Functions/odpovedi1.png" data-toggle="lightbox">
+                                            <img class="img-fluid" src="assets/img/Functions/odpovedi1.png">
+                                        </a>
                                     </div>
                                     <div class="col-md-4">
-                                        <img class="img-fluid" src="assets/img/Functions/odpovedi2.png  ">  
+                                        <a href="assets/img/Functions/odpovedi2.png" data-toggle="lightbox">
+                                            <img class="img-fluid" src="assets/img/Functions/odpovedi2.png">  
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -846,6 +877,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html
