repaired contact form

--- a/index.html
+++ b/index.html
@@ -838,7 +838,7 @@
                                 </div>
             
                                 <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, tempora culpa? Modi omnis, temporibus esse expedita aliquam, natus officia, 
+                                   Na uvedené adrese Vás budeme kontaktovat nejpozději do dvou pracovních dnů.
                                 </p>
             
                                 <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button-turquoise">
@@ -851,7 +851,7 @@
                         <div class="row">
                             <div class="col-md-3">
                                 <img class="img-fluid effit-logo" src="assets/img/logo.png" alt="">
-                            </div>
+                            </div> 
                             <div class="col-md-3 bp-logo">
                                 <img class="img-fluid" src="assets/img/logo_2.png" alt="">
                             </div>
@@ -860,8 +860,8 @@
                                 <ul>
                                     <li><i class="fa fa-phone"></i>(+420) 725 949 433</li>
                                     <li><i class="fa fa-envelope"></i>obchod@bluepartners.cz</li>
-                                    <li>Ochrana soukromí</li>
-                                    <li>obchodní podmínky</li>
+                                    <li><a href="#">Ochrana soukromí</a></li>
+                                    <li><a href="#">Obchodní podmínky</a></li>
                                 </ul>
                             </div>
                         </div>
