edit order form

--- a/index.html
+++ b/index.html
@@ -794,7 +794,7 @@
                             <label for="check2">Zpracování Osobních Údajů</label>
                         </form>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus cum error id sapiente dolores quos consequatur exercitationem ipsam?
+                            Na uvedené údaje Vás budeme kontaktovat v rámci objednávky a dohodnutí dalších kroků. 
                         </p>
                     </div>
                 </div>
