--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@
 
                         <div class="row">
                             <div class="col-md-6">
-                                <img src="assets/img/stredni_firma.png">
+                                <img id="buyformimg" src="assets/img/stredni_firma.png">
 
                                     <label for="name">Název Firmy</label>
                                     <input type="text" name="name">
