Setup form before clicking

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                         </p>
                         <p class="price-text">CENA OD</p>
                         <p class="product-price green">9 499 Kč <span class="with-dph">s DPH</span></p>
-                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--green" data-toggle="modal" data-target="#buyModal">
+                        <button onclick="setupBuyForm('mala_firma')" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--green" data-toggle="modal" data-target="#buyModal">
                             <i class="fa fa-shopping-cart"></i> Zakoupit
                         </button>
                     </div>
@@ -163,7 +163,7 @@
                         </p>
                         <p class="price-text">CENA OD</p>
                         <p class="product-price blue">18 499 Kč <span class="with-dph">s DPH</span></p>
-                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--blue" data-toggle="modal" data-target="#buyModal">
+                        <button onclick="setupBuyForm('stredni_firma')" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--blue" data-toggle="modal" data-target="#buyModal">
                             <i class="fa fa-shopping-cart"></i> Zakoupit
                         </button>
                     </div>
@@ -180,7 +180,7 @@
                         </p>
                         <p class="price-text">CENA OD</p>
                         <p class="product-price purple">37 499 Kč <span class="with-dph">s DPH</span></p>
-                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--purple" data-toggle="modal" data-target="#buyModal">
+                        <button onclick="setupBuyForm('velka_firma')" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--purple" data-toggle="modal" data-target="#buyModal">
                             <i class="fa fa-shopping-cart"></i> Zakoupit
                         </button>
                     </div>
