Make buybtn work

--- a/index.html
+++ b/index.html
@@ -821,7 +821,6 @@
                 <div class="contactus-modal">
                     <div class="container">
                         <h1 id="contactformhead">Ozvěte se nám</h1>
-
                         <form id="contactform">
                             <div class="form-group">
                                 <label for="name">Jméno a Příjmení</label>
@@ -836,6 +835,7 @@
                                 <label for="message">Vaše zpráva</label>
                                 <input type="text" name="message">
 																<input type="hidden" name="systemmessage" value="Vzkaz z kontaktního formuláře">
+																<input type="hidden" name="company" value="Nebyla zadána">
 
                                 <div class="conditions">
                                     <input type="checkbox" name="conditions">
